package com.csia_galeta.ser;

public final class CompetitionStates {
    public static final String PLANNED = "Planned";
    public static final String QUALIFICATION_IN_PROGRESS = "Qualification In Progress";
    public static final String RUN_IN_PAIRS_IN_PROGRESS = "Pairs run in Progress";
    public static final String COMPETITION_IS_FINISHED = "Competition is Finished";
    public static final String FINAL_ROUND = "Competition Final";
}